Fix visual bug on ProjectResource overflow button (#452)
* Tweak project flow button

* Add hover to button

--- a/web/app/styles/components/project.scss
+++ b/web/app/styles/components/project.scss
@@ -57,8 +57,21 @@
       @apply text-color-foreground-faint;
     }
 
+    .overflow-button {
+      &:hover,
+      &:focus,
+      &:active,
+      &:focus-visible,
+      &.open {
+        .button-affordance {
+          @apply bg-color-page-primary;
+        }
+      }
+    }
+
     .overflow-button-container {
       @apply absolute right-1 top-1;
+      @apply from-color-page-faint;
     }
   }
 }
